@@ -431,25 +431,6 @@ Description: Qt 4 test module
  The QtTest module provides classes for unit testing Qt applications and
  libraries.
 
-Package: libqt4-phonon
-Architecture: any
-Multi-Arch: same
-Pre-Depends: ${misc:Pre-Depends}
-Depends: ${misc:Depends}, ${shlibs:Depends}
-Conflicts: libphonon4
-Breaks: kdelibs5 (<= 4:4.0.80)
-Replaces: kdelibs5 (<= 4:4.0.80), libphonon4
-Description: Qt 4 Phonon module
- Qt is a cross-platform C++ application framework. Qt's primary feature
- is its rich set of widgets that provide standard GUI functionality.
- .
- The Qt Phonon module provides a cross-platform multimedia framework that
- enables the use of audio and video content in Qt applications.
- .
- The sole purpose of this package to provide Phonon libraries until libphonon4
- is built from the phonon source package. Therefore it's only useful when
- bootstraping new architectures or rebuilding the whole archive from scratch.
-
 Package: libqt4-declarative
 Architecture: any
 Multi-Arch: same
