@@ -1,2 +1,0 @@
-usr/lib/*/libphonon.so.4*
-usr/lib/*/qt4/plugins/designer/libphononwidgets.so
