@@ -1,1 +1,0 @@
-libqt4-phonon: package-name-doesnt-match-sonames libphonon4
