@@ -17,5 +17,3 @@
 ./usr/lib/libQtWebKit.la
 ./usr/lib/libQtXml.la
 ./usr/lib/libQtXmlPatterns.la
-./usr/lib/libphonon.la
-./usr/lib/qt4/plugins/phonon_backend/libphonon_gstreamer.so
